--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@faker-js/faker": "^8.4.1",
     "@react-navigation/native": "^6.1.7",
     "expo": "^51.0.18",
     "expo-constants": "~16.0.1",
