--- a/app.json
+++ b/app.json
@@ -10,7 +10,15 @@
       "output": "static",
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      [
+        "expo-asset",
+        {
+          "assets": ["./assets/images/"]
+        }
+      ],
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true,
 
