--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@faker-js/faker": "^8.4.1",
+    "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.7",
-    "expo": "^51.0.18",
-    "expo-constants": "~16.0.1",
+    "expo": "~51.0.21",
+    "expo-asset": "~10.0.10",
+    "expo-constants": "~16.0.2",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
@@ -29,9 +32,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-asset": "~10.0.10",
-    "expo-linear-gradient": "~13.0.2"
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
