--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@faker-js/faker": "^8.4.1",
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.7",
+    "@types/chroma-js": "^2.4.4",
+    "chroma-js": "^2.4.2",
     "expo": "~51.0.21",
     "expo-asset": "~10.0.10",
     "expo-constants": "~16.0.2",
